@@ -122,7 +122,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<argLine>-Xmx512m</argLine>
+					<argLine>-Xmx512m -XX:MaxPermSize=192m -XX:-UseGCOverheadLimit</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
